View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022774 | Open CASCADE | OCCT:Foundation Classes | public | 2011-10-21 11:48 | 2012-03-29 17:26 |
Reporter | epv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022774: Memory leak in OSD_FontMgr::InitFontDataBase() method | ||||
Description | There are two variables "windir_var" and "font_dir" in OSD_FontMgr::InitFontDataBase() method that are allocated with "new" operator. But delete operator is not called for both. It causes the memory leak. This bug was detected with help of Intel parallel inspector. | ||||
Tags | No tags attached. | ||||
Test case number | Test case is not required | ||||
|
Branch http://svn/svn/occt/branches/0022774 is ready to be reviewed. |
|
Code review remark: please revise the fix so as to use C++ classes (OSD_Environment, TCollection_HAsciiString) instead of plain C code. This will make code simpler and safer, and shall help to recognize and handle better special cases as e.g. if variable WinDir is not defined. |
|
Remarks were taking into account. The new version is ready to be reviewed. |
|
No remarks, please test |
|
Dear BugMaster, Workbench KAS:dev:mkv-22774-occt was created from SVN branch http://svn/svn/occt/branches/0022774 (and mkv-22774-products from trunk) and compiled on Linux platform. There are not regressions in mkv-22774-products regarding to KAS:dev:products-20111216-opt See results in /QADisk/occttests/results/KAS/dev/mkv-22774-products_21122011/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20111216-opt_17122011/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into trunk of occt repository Date: 2011-12-23 10:31:56 +0400 (Fri, 23 Dec 2011) New Revision: 9851 Modified: trunk/src/OSD/OSD_FontMgr.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-10-21 11:48 | epv | New Issue | |
2011-10-21 11:48 | epv | Assigned To | => epv |
2011-11-15 09:58 | epv | Status | new => assigned |
2011-11-15 11:18 | epv | Note Added: 0018539 | |
2011-11-15 11:18 | epv | Assigned To | epv => abv |
2011-11-15 11:18 | epv | Status | assigned => resolved |
2011-11-15 12:33 |
|
Note Added: 0018545 | |
2011-11-15 12:33 |
|
Assigned To | abv => epv |
2011-11-15 12:33 |
|
Status | resolved => assigned |
2011-12-20 17:05 | epv | Note Added: 0018923 | |
2011-12-20 17:05 | epv | Status | assigned => resolved |
2011-12-20 17:06 | epv | Assigned To | epv => abv |
2011-12-20 17:51 |
|
Note Added: 0018926 | |
2011-12-20 17:51 |
|
Assigned To | abv => epv |
2011-12-20 17:51 |
|
Status | resolved => reviewed |
2011-12-21 20:34 |
|
Note Added: 0018939 | |
2011-12-21 20:34 |
|
Test case number | => Test case is not required |
2011-12-21 20:34 |
|
Status | reviewed => tested |
2011-12-23 10:36 | bugmaster | Note Added: 0018956 | |
2011-12-23 10:36 | bugmaster | Status | tested => verified |
2011-12-23 10:36 | bugmaster | Resolution | open => fixed |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master a6535b1d |