0022774: Memory leak in OSD_FontMgr::InitFontDataBase() method